--- a/app/auth/templates/auth/signup.html
+++ b/app/auth/templates/auth/signup.html
@@ -68,7 +68,7 @@
                     {% endfor %}
                 </div>
                 <button type="submit">Registrate</button>
-                <p><a href="{{ url_for('signin') }}">Inicia sesión</a></p>
+                <p><a href="{{ url_for('auth.signin') }}">Inicia sesión</a></p>
             </form>
         </div>
     </div>
